--- a/README
+++ b/README
@@ -1,3 +1,8 @@
+
+Name: Maryl Marie Sara
+Email: marylvsara@gmail.com
+LinkedIn: https://www.linkedin.com/jobs/view/3123178190
+
 # Checkout Flow
 
 ## Test cases
